--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -9,7 +9,7 @@ html {
 
 body {
   min-height           : 100dvh;
-  background-color     : var(--base-color);
+  background-color: var(--blue);
   color                : var(--text-color);
   font-family          : 'Helvetica Neue', 'Arial', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', 'BIZ UDPGothic', 'Yu Gothic', sans-serif;
   font-size            : var(--fs-medium);
