--- a/assets/scss/mixin.scss
+++ b/assets/scss/mixin.scss
@@ -1,8 +1,8 @@
 
 $breakpoint: (
-  mobile : 'screen and (max-width: 500px)',
-  tablet : 'screen and (max-width: 780px)',
-  desktop: 'screen and (min-width: 900px)'
+  mobile : 'screen and (max-width: 800px)',
+  tablet : 'screen and (max-width: 1024px)',
+  // desktop: 'screen and (min-width: 1024px)'
 );
 
 
