--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -9,7 +9,7 @@ html {
 
 body {
   min-height           : 100dvh;
-  background-color: var(--lightblue);
+  background-color: var(--white);
   color                : var(--text-color);
   font-family          : 'Yu Gothic','YuGothic','Helvetica Neue', 'Arial',  'Hiragino Kaku Gothic ProN', 'Hiragino Sans', 'BIZ UDPGothic', sans-serif;
   font-size            : var(--fs-medium);
@@ -18,6 +18,7 @@ body {
   word-wrap            : break-word;
   font-feature-settings: 'palt';
   leading-trim         : both;
+  outline: 1px solid red;
 }
 
 //kai-groupのオリジナル
