メッセージ

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -75,4 +75,6 @@ $minViewport: 740;
   --z-index-nav          : 70;
   --z-index-header       : 60;
   --z-index-contents     : 50;
+  --section-max-width    : 1070px;
+  --hero-max-width       : 1054px;
 }
