--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -20,7 +20,7 @@ body {
   outline: 1px solid red;
 }
 
-//kai-groupのオリジナル
+/////////////////////////////////  kai-groupのオリジナル
 .heading_en {
   font-size     : var(--fs-heading-en);
   letter-spacing: var(--letter-spacing-normal);
@@ -60,7 +60,18 @@ body {
   column-count: 2;
   column-width: 200px;
 }
-// ここまで
+
+@keyframes text_anime {
+  0% {
+    opacity:0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity:1;
+    transform: translateY(0);
+  }
+}
+////////////////////////////////////  ここまで
 
 p {
   margin : 0;
